# python-bigquery-migrations

./: .coveragerc  .env.example  .flake8  .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md  RELEASE.md  SECURITY.md
.github/workflows/: codeql-analysis.yaml  pypi-publish.yaml  test.yaml  testpypi-publish.yaml
src/bigquery_migrations/: __init__.py  migration_cli.py
tests/unit/: test_migration_dir_handler.py  test_migration_factory.py  test_migration_log_handler.py  test_migration_manager.py
tests/unit/migrations/: 2024_01_01_120000_create_dataset_example.py  2024_01_02_120000_create_table_example.py  2024_01_03_120000_create_table_from_json_schema_example.py  2024_01_04_120000_create_another_table_example.py  migration_log.json
tests/unit/migrations/schemas/: users_table_schema.json
