[metadata]
name = bigquery-migrations
version = attr: bigquery-migrations.__version__
description = Simple tool for writing Google BigQuery migrations
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/RolandBende/python-bigquery-migrations
author = Roland Bende
author_email = benderoland@gmail.com
license = MIT
license_files = LICENSE
keywords = migrations, bigquery
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    google-auth>=2.37.0,<3.0.0
    google-cloud-bigquery>=3.27.0,<4.0.0
    colorama>=0.4.6,<1.0.0
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bigquery-migrations = bigquery_migrations.migration_cli:main
